@@ -26,10 +26,10 @@ public class DepartmentsTest {
 
     @Test
     public void whenUpDepartmentGoBefore() {
-        List<String> input = Arrays.asList("K1/SK1/SSK1", "K2/SK1/SSK2", "K1/SK1/SSK2", "K2/SK1/SSK1"
-                                            , "K1/SK2","K2/SK2" );
-        List<String> expect = List.of("K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2"
-                                            , "K2/SK2", "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
+        List<String> input = Arrays.asList("K1/SK1/SSK1", "K2/SK1/SSK2", "K1/SK1/SSK2",
+                "K2/SK1/SSK1", "K1/SK2", "K2/SK2");
+        List<String> expect = List.of("K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2",
+                "K2/SK2", "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
